--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-extended": "^4.0.2",
     "jsdom": "latest",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
