Test Every Class In The Full-Fomod Parser
Also use the correct No Explicit Any TSLint key

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,6 +70,6 @@
       "func-style": "off",
       "@typescript-eslint/no-this-alias": "off",
       "github/array-foreach": "off",
-      "no-explicit-any": "off"
+      "@typescript-eslint/no-explicit-any": "off"
   }
 }
