--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "type": "module",
   "name": "fomod",
   "description": "A library for creating, parsing, editing, and validating XML-based Fomod installers, widely popularized in the Bethesda modding scene",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "dist/index.js",
   "repository": "https://github.com/BellCubeDev/fomod-js/",
   "bugs": {
     "url": "https://github.com/BellCubeDev/fomod-js/issues/new/"
   },
+  "author": {
+    "name": "BellCube",
+    "url": "https://bellcube.dev"
+  },
+  "license": "LGPL-3.0-or-later",
   "scripts": {
     "build": "tsc",
     "test": "npx jest --verbose --colors",
