--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,20 +13,39 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
-              - name: Checkout
-                uses: actions/checkout@v3
 
-              - name: Setup Node
-                uses: actions/setup-node@v3
+              # ============================
+              #        Project Setup
+              # ============================
+
+              - name: Clone Repo
+                uses: actions/checkout@v4
                 with:
-                    node-version: latest
+                  submodules: 'recursive'
 
-              - name: Install Dependencies
-                run: npm i
+
+              - name: Set Up PNPM
+                uses: pnpm/action-setup@v4
+                with:
+                    version: 9
+
+
+              - name: Set Up Node.js
+                uses: actions/setup-node@v4
+                with:
+                  node-version: latest
+                  cache: 'pnpm'
+
+
+              - name: Install dependencies
+                run: pnpm install --frozen-lockfile
+
+              # =============================
+              #    Workflow-Specific Stuff
+              # =============================
 
               - name: Run Tests
                 run: npm run test
 
               - name: Check Types
                 run: npm run type-check
-
