--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dist",
     "readme.md",
     "license",
-    "src"
+    "src/**/*.ts",
+    "!src/**/*.test.ts",
+    "!src/tests/**/*"
   ],
   "nodemonConfig": {
     "watch": [
@@ -35,22 +37,20 @@
     "exec": "ts-node --project ./tsconfig.json --esm"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitest/coverage-v8": "^2.0.5",
     "eslint": "^8.56.0",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-extended": "^4.0.2",
     "jsdom": "^23.0.1",
-    "polyfill-pseudoclass-has": "^1.0.0",
-    "ts-jest": "^29.1.1",
+    "rollup": "*",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^2.0.5"
   },
   "keywords": [
     "fomod",
