--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,7 @@ jobs:
               # =============================
 
               - name: Run Tests
-                run: npm run test
+                run: pnpm run test
 
               - name: Check Types
-                run: npm run type-check
+                run: pnpm run type-check
