--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "LGPL-3.0-or-later",
   "scripts": {
     "build": "tsc",
-    "test": "npx jest --verbose --colors",
-    "test-ci": "npx jest --verbose --colors --ci --coverage --debug",
+    "test": "vitest --run",
+    "test-ci": "vitest --run",
     "type-check": "tsc --noEmit"
   },
   "files": [
@@ -37,19 +37,19 @@
     "exec": "ts-node --project ./tsconfig.json --esm"
   },
   "devDependencies": {
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.10.6",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^20.16.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitest/coverage-v8": "^2.0.5",
-    "eslint": "^8.56.0",
-    "eslint-plugin-github": "^4.10.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
-    "jsdom": "^23.0.1",
+    "jsdom": "^23.2.0",
     "rollup": "*",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   },
   "keywords": [
