Fix Info.xml Name Capitalization Part 1

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto
 
 Info.xml working-tree-encoding=UTF-16 LE
+1info.xml working-tree-encoding=UTF-16 LE
 ModuleConfig.xml working-tree-encoding=UTF-16 LE
