--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,4 +48,4 @@ jobs:
                 run: pnpm run test
 
               - name: Check Types
-                run: pnpm run type-check
+                run: pnpm run typecheck
