--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "xml-formatter": "^3.6.6"
   },
   "keywords": [
     "fomod",
